--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </p>
           </div>
           <div class="CV">
-            <a href=""
+            <a target="_blank" href="./docs/CV Cédric.pdf"
               ><button><span>My Resume</span></button></a
             >
           </div>
@@ -61,7 +61,7 @@
           <div class="option"><span>Type:</span> <i>HTML/SASS/JS</i></div>
           <div class="option">
             <span>Github:</span
-            ><a href=""><i class="fa-brands fa-github"></i></a>
+            ><a target="_blank" href="https://github.com/CedricSanchezGithub/HBLM2"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
         <div class="card">
@@ -71,7 +71,7 @@
           <div class="option"><span>Type:</span> <i>Kotlin</i></div>
           <div class="option">
             <span>Github:</span
-            ><a href=""><i class="fa-brands fa-github"></i></a>
+            ><a target="_blank" href="https://github.com/CedricSanchezGithub/"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
         <div class="card">
@@ -81,7 +81,7 @@
           <div class="option"><span>Type:</span> <i>VueJS, TailwindCSS</i></div>
           <div class="option">
             <span>Github:</span
-            ><a href=""><i class="fa-brands fa-github"></i></a>
+            ><a target="_blank" href="https://github.com/CedricSanchezGithub/"><i class="fa-brands fa-github"></i></a>
           </div>
         </div>
       </div>
@@ -90,14 +90,14 @@
       <div class="contact-left">
         <h1>Don't hesitate to contact me</h1>
         <div class="social">
-          <a href="https://www.linkedin.com/in/c%C3%A9dric-sanchez-902257277/"
+          <a target="_blank" href="https://www.linkedin.com/in/c%C3%A9dric-sanchez-902257277/"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-          <a href="https://github.com/CedricSanchezGithub"
+          <a target="_blank" href="https://github.com/CedricSanchezGithub"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a href="https://discord.gg/eBDJzKK7TY"
-            ><i class="fa-brands fa-discord"></i
+          target="_blank"><i class="fa-brands fa-discord"></i
           ></a>
           <a href="mailto:sanchez.cedric.pro@gmail.com"
             ><i class="fa-solid fa-at"></i
@@ -114,7 +114,7 @@
       </div>
       <footer>
         <div class="footer">
-          <p>Made by <span>Cédric Sanchez</span>. 2014. <i>Version 1.0</i></p>
+          <p>Made by <span>Cédric Sanchez</span>. 2024. <i>Version 1.0</i></p>
         </div>
       </footer>
     </section>
