--- a/index.html
+++ b/index.html
@@ -107,14 +107,12 @@
       </div>
       <div class="message">
         <p>
-          <span>Nota bene:</span> My portfolio is simple, i wanted to product it
-          as fast as i can to be able to find the stage i am currently looking
-          for. It will be updated later.
+          <span>Nota bene:</span> Portfolio in progress
         </p>
       </div>
       <footer>
         <div class="footer">
-          <p>Made by <span>Cédric Sanchez</span>. 2024. <i>Version 1.0</i></p>
+          <p>2024. Made by <span>Cédric Sanchez only with Sass</span></p>
         </div>
       </footer>
     </section>
