--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio de Cédric</title>
+    <title>Cédric Sanchez - Dev à Montpellier</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -67,7 +67,7 @@
         <div class="card">
           <h2>Bagueton (App)</h2>
           <div class="option"><span>Type:</span> <i>Android App</i></div>
-          <div class="option"><span>For:</span> <i>Myself</i></div>
+          <div class="option"><span>For:</span> <i>Friends</i></div>
           <div class="option"><span>Type:</span> <i>Kotlin</i></div>
           <div class="option">
             <span>Github:</span
@@ -77,7 +77,7 @@
         <div class="card">
           <h2>Bagueton</h2>
           <div class="option"><span>Type:</span> <i>Website</i></div>
-          <div class="option"><span>For:</span><i> Myself (Promotional)</i></div>
+          <div class="option"><span>For:</span><i> Friends (Promotional)</i></div>
           <div class="option"><span>Type:</span> <i>VueJS, TailwindCSS</i></div>
           <div class="option">
             <span>Github:</span
