--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>My name is Cédric.</h2>
             <p>
               I begin a new journey, <br />
-              to become <span>Web Developper</span>.
+              to become <span>Web Developer</span>.
             </p>
           </div>
           <div class="CV">
