--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cédric Sanchez - Dev à Montpellier</title>
-    <link rel="stylesheet" href="/Portfolio_v3t/src/styles/output.css" />
-    <link rel="stylesheet" href="/Portfolio_v3t/src/styles/effets.css" />
+    <link rel="stylesheet" href="./Portfolio_v3t/src/styles/output.css" />
+    <link rel="stylesheet" href="./Portfolio_v3t/src/styles/effets.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="./img/231138.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./Portfolio_v3t/src/img/231138.png" type="image/x-icon" />
   </head>
   <body class="bg-gradient-texture font-semibold">
     <div class="h-screen text-slate-50" id="home">
@@ -56,7 +56,7 @@
           </div>
 
           <div class="max-w-200px">
-            <img src="./img/avatar.png" alt="avatar de cedric le mage gris" />
+            <img src="./Portfolio_v3t/src/img/avatar.png" alt="avatar de cedric le mage gris" />
           </div>
         </div>
       </div>
@@ -114,6 +114,8 @@
             <span class="text-indigo-300">Status: </span> Prototype
           </div>
         </div>
+        <div class="grid align-items">
+
         <h3 class="text-center">Contact me</h3>
         <div class="social text-center m-10">
           <a
@@ -143,8 +145,8 @@
             ></i
           ></a>
         </div>
-        <div></div>
       </div>
+    </div>
       <div class="flex justify-center">
         <footer class="sticky xl:w-1/2 border-t-2 text-center p-5">
           <span class="text-xs"
