build(deps): update package-lock.json and index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               class="text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
             >
               I'm at the beginning of a new journey, <br />
-              to become <span>Web Developer Full-Stack</span>. <br />
+              to become a <span>Software Engineer</span>. <br />
               Let's
               <span
                 class="underline underline-offset-3 decoration-from-font decoration-blue-400 dark:decoration-blue-600"
@@ -119,7 +119,7 @@
         <h3 class="text-center">Contact me</h3>
         <div class="social text-center m-10">
           <a
-            class="m-10"
+            class="sm:m-10 m-1"
             target="_blank"
             href="https://www.linkedin.com/in/c%C3%A9dric-sanchez-902257277/"
             ><i
@@ -127,19 +127,19 @@
             ></i
           ></a>
           <a
-            class="m-10"
+            class="sm:m-10 m-1"
             target="_blank"
             href="https://github.com/CedricSanchezGithub"
             ><i
               class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-500"
             ></i
           ></a>
-          <a class="m-10" href="https://discord.gg/eBDJzKK7TY" target="_blank"
+          <a class="sm:m-10 m-1" href="https://discordapp.com/users/25399227543938" target="_blank"
             ><i
               class="fa-brands fa-discord text-xl hover:scale-125 ease-out duration-300 text-sky-500"
             ></i
           ></a>
-          <a class="m-10" href="mailto:sanchez.cedric.pro@gmail.com"
+          <a class="sm:m-10 m-1" href="mailto:sanchez.cedric.pro@gmail.com"
             ><i
               class="fa-solid fa-at text-xl hover:scale-125 ease-out duration-300 text-sky-500"
             ></i
