--- a/Portfolio_v3t/src/index.html
+++ b/Portfolio_v3t/src/index.html
@@ -16,14 +16,14 @@
     <link rel="shortcut icon" href="./img/231138.png" type="image/x-icon" />
   </head>
   <body class="bg-gradient-texture font-semibold">
+    <nav class="fixed top-0 translate-x-1/2 right-1/2	text-slate-50 bg-gradient-texture border-b-2 border-x-2 rounded-b-lg border-sky-500 ">
+      <ul class="flex justify-center">
+        <a href="#home"><li class="m-5">Home</li></a>
+        <a href="#projects"><li class="m-5">Projects</li></a>
+        <a href=""><li class="m-5">Contact</li></a>
+      </ul>
+    </nav>
     <div class="h-screen text-slate-50" id="home">
-      <nav>
-        <ul class="flex justify-center">
-          <a href="#home"><li class="m-5">Home</li></a>
-          <a href="#projects"><li class="m-5">Projects</li></a>
-          <a href=""><li class="m-5">Contact</li></a>
-        </ul>
-      </nav>
       <div class="grid content-center h-full mb-10">
         <div
           class="flex justify-center items-center max-sm:flex-col-reverse text-indigo-300"
@@ -51,7 +51,7 @@
             <button
               id="myresume"
               type="button"
-              class="text-white border-solid border-2 border-sky-500 hover:border-sky-700 duration-300 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-28 hover:scale-110 ease-in"
+              class="text-white border-solid border-2 border-sky-500 hover:border-sky-700 duration-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-28 hover:scale-110 ease-in"
             >
               <span id="shadowButton">Resume</span>
             </button>
@@ -77,9 +77,9 @@
           >
         </h2>
 
-        <div class="grid md:grid-cols-3 gap-4 align-middle m-5 lg:m-20">
+        <div class="grid md:grid-cols-3 justify-items-center	 gap-4 align-middle m-5 lg:m-20">
           <div
-            class="border-solid border-2 border-sky-500 lg:p-10 p-5 rounded-lg max-h-64 text-center"
+            class="border-solid border-2 border-sky-500 lg:p-10 p-5 rounded-lg max-h-64 text-center w-80"
           >
             <div class="inline">
               <h2 class="text-center pb-5">HBLM</h2>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div
-            class="border-solid border-2 border-sky-500 lg:p-10 p-5 rounded-lg max-h-64 text-center"
+            class="border-solid border-2 border-sky-500 lg:p-10 p-5 rounded-lg max-h-64 text-center w-80"
           >
             <h2 class="text-center pb-5">Bagueton (App)</h2>
             <span class="text-indigo-300">Type:</span> <span>Android App</span
@@ -108,7 +108,7 @@
             <span class="text-indigo-300">Status:</span> Prototype
           </div>
           <div
-            class="border-solid border-2 border-sky-500 lg:p-10 p-5 rounded-lg max-h-64 text-center"
+            class="border-solid border-2 border-sky-500 lg:p-10 p-5 rounded-lg max-h-64 text-center w-80"
           >
             <h2 class="text-center pb-5">Bagueton</h2>
             <span class="text-indigo-300">Type:</span> <span> Website</span>
