delete 1 file and update 2 files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cédric Sanchez - Dev à Montpellier</title>
-    <link rel="stylesheet" href="./styles/output.css" />
-    <link rel="stylesheet" href="./styles/effets.css" />
+    <link rel="stylesheet" href="./Portfolio_v3t/src/styles/effets.css" />
+    <link rel="stylesheet" href="Portfolio_v3t/src/styles/output.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -59,7 +59,7 @@
 
           <div>
             <img
-              src="./img/avatar.png"
+              src="Portfolio_v3t\src\img\avatar.png"
               alt="avatar de cedric le mage gris"
               class="max-w-60"
             />
