--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="./img/231138.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./Portfolio_v3t/src/img/231138.png" type="image/x-icon" />
   </head>
   <body class="bg-gradient-texture font-semibold">
     <nav class="fixed top-0 translate-x-1/2 right-1/2	text-slate-50 bg-gradient-texture border-b-2 border-x-2 rounded-b-lg border-sky-500 ">
