update output.css and index.html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       class="fixed top-0 translate-x-1/2 right-1/2 text-slate-50 border-b-2 border-x-2 rounded-b-lg border-sky-500"
     >
       <ul class="flex justify-center">
-        <a href="#home"><li class="my-2 mx-10">Home</li></a>
-        <a href="#projects"><li class="my-2 mx-10">Projects</li></a>
-        <a href="#contact"><li class="my-2 mx-10">Contact</li></a>
+        <a href="#home"><li class="my-2 m-5 sm:mx-10">Home</li></a>
+        <a href="#projects"><li class="my-2 m-5 sm:mx-10">Projects</li></a>
+        <a href="#contact"><li class="my-2 m-5 sm:mx-10">Contact</li></a>
       </ul>
     </nav>
     <div class="h-screen text-slate-50" id="home">
