--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
     >
       <ul class="flex justify-center">
         <a href="#home"><li class="my-2 max-sm:mx-5 sm:mx-10">Home</li></a>
-        <a href="#projects"><li class="my-2 max-sm:mx-5 sm:mx-10">Projects</li></a>
-        <a href="#contact"><li class="my-2 max-sm:mx-5 sm:mx-10">Contact</li></a>
+        <a href="#projects"
+          ><li class="my-2 max-sm:mx-5 sm:mx-10">Projects</li></a
+        >
+        <a href="#contact"
+          ><li class="my-2 max-sm:mx-5 sm:mx-10">Contact</li></a
+        >
       </ul>
     </nav>
     <div class="h-screen text-slate-50" id="home">
@@ -54,13 +58,15 @@
               >
             </p>
             <br />
-            <button
-              id="myresume"
-              type="button"
-              class="text-white border-solid border-2 border-sky-700 hover:border-sky-500 duration-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-28 hover:scale-110 ease-in"
+            <a href="./Portfolio_v3t/src/docs/Cedric_CV.pdf" target="_blank"
+              ><button
+                id="myresume"
+                type="button"
+                class="text-white border-solid border-2 border-sky-700 hover:border-sky-500 duration-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-28 hover:scale-110 ease-in"
+              >
+                <span id="shadowButton">Resume</span>
+              </button></a
             >
-              <span id="shadowButton">Resume</span>
-            </button>
           </div>
 
           <div>
@@ -87,7 +93,7 @@
           class="grid max-lg:grid-rows-3 lg:grid-cols-3 justify-items-center gap-4 m-5 lg:m-20"
         >
           <div
-            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72	xl:w-80"
+            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
             <div class="inline">
               <h2 class="text-center pb-5">HBLM</h2>
@@ -108,7 +114,7 @@
             </div>
           </div>
           <div
-            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72	xl:w-80"
+            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
             <h2 class="text-center pb-5">Bagueton (App)</h2>
             <span class="text-indigo-300">Type:</span> <span>Android App</span
@@ -128,7 +134,7 @@
             <span class="text-indigo-300">Status:</span> Prototype
           </div>
           <div
-            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72	xl:w-80"
+            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
             <h2 class="text-center pb-5">Bagueton</h2>
             <span class="text-indigo-300">Type:</span> <span> Website</span>
