update output.css and index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               ><button
                 id="myresume"
                 type="button"
-                class="text-white border-solid border-2 border-sky-700 hover:border-sky-500 duration-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 ease-in"
+                class="text-white border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 ease-in"
               >
                 <span id="shadowButton"
                   >My Resume <i class="fa-solid fa-download"></i
@@ -91,7 +91,7 @@
               class="grid sm:grid-cols-2 sm:grid-rows-2 gap-6 m-5 max-w-xl grid-cols-1"
             >
               <div
-                class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-500"
+                class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
               >
                 <h2 class="m-2 text-indigo-300 text-center">Who i am</h2>
                 <p class="m-2">
@@ -113,7 +113,7 @@
                 </p>
               </div>
               <div
-                class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-500"
+                class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
               >
                 <h2 class="text-indigo-300 text-center m-2">Technologies</h2>
                 <div class="flex justify-center m-2">
@@ -177,7 +177,7 @@
                 </div>
               </div>
               <div
-                class="bg-transparent row-span-1 col-span-1 py-4 text-slate-50 border-b-2 border rounded-lg border-sky-500"
+                class="bg-transparent row-span-1 col-span-1 py-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
               >
                 <h2 class="text-indigo-300 text-center m-2">More about me</h2>
               </div>
@@ -198,7 +198,7 @@
               class="grid sm:grid-cols-2 sm:grid-rows-2 gap-6 m-5 max-w-xl grid-cols-1"
             >
               <div
-                class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-500"
+                class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
               >
                 <h2 class="m-2 text-indigo-300 text-center">Who i am</h2>
                 <p class="m-2">
@@ -220,7 +220,7 @@
                 </p>
               </div>
               <div
-                class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-500"
+                class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
               >
                 <h2 class="text-indigo-300 text-center m-2">Technologies</h2>
                 <div class="flex justify-center m-2">
@@ -273,7 +273,7 @@
                 </div>
               </div>
               <div
-                class="bg-transparent row-span-1 col-span-1 py-4 text-slate-50 border-b-2 border rounded-lg border-sky-500"
+                class="bg-transparent row-span-1 col-span-1 py-4 text-slate-50 border-b-2 border rounded-lg border-sky-800"
               >
                 <h2 class="text-indigo-300 text-center m-2">More about me</h2>
               </div>
@@ -297,7 +297,7 @@
           class="grid max-lg:grid-rows-3 lg:grid-cols-3 justify-items-center gap-4 m-5 lg:m-20"
         >
           <div
-            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
+            class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
             <div class="inline">
               <h2 class="text-center pb-5">HBLM</h2>
@@ -318,7 +318,7 @@
             </div>
           </div>
           <div
-            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
+            class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
             <h2 class="text-center pb-5">Bagueton (App)</h2>
             <span class="text-indigo-300">Type:</span> <span>Android App</span
@@ -338,7 +338,7 @@
             <span class="text-indigo-300">Status:</span> Prototype
           </div>
           <div
-            class="border-solid border-2 border-sky-500 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
+            class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
             <h2 class="text-center pb-5">Bagueton</h2>
             <span class="text-indigo-300">Type:</span> <span> Website</span>
