update index.html and index_french.html

--- a/index_french.html
+++ b/index_french.html
@@ -43,7 +43,7 @@
         <li
           class="whitespace-nowrap my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110"
         >
-          <a href="./index_eng.html">English</a>
+          <a href="./index.html">English</a>
           <i class="fa-solid fa-up-right-from-square"></i>
         </li>
       </ul>
