--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       type="image/x-icon"
     />
   </head>
-  <body class="bg-gradient-texture font-semibold">
+  <body class="bg-gradient-texture font-semibold text-slate-50">
     <nav
       class="fixed top-0 translate-x-1/2 right-1/2 rounded-b-lg text-slate-50 shadow shadow-sky-500/50"
     >
@@ -38,7 +38,7 @@
           <a href="#introduction_mobile">Introduction</a>
         </li>
         <li class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110">
-          <a href="#projects">Projets</a>
+          <a href="#projects">Projects</a>
         </li>
         <li
           class="whitespace-nowrap my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110"
@@ -79,7 +79,7 @@
               ><button
                 id="myresume"
                 type="button"
-                class="text-white border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 ease-in"
+                class="text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 ease-in"
               >
                 <span class="text-lg"
                   >My Resume <i class="text-lg fa-solid fa-download"></i
@@ -102,7 +102,7 @@
       >
         <h1 class="text-center">
           <mark
-            class="m-5 px-2 text-2xl text-white bg-blue-600 rounded dark:bg-blue-500"
+            class="m-5 px-2 text-2xl text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
             >Introduction</mark
           >
         </h1>
@@ -216,9 +216,9 @@
       </div>
       <!-- Fin partie mobile -->
     </div>
-    <div class="mousedown">
+    <div class="mousedown ">
       <a href="#introduction_mobile">
-        <i class="fa-solid fa-caret-down sm:hidden"></i
+        <i class="fa-solid fa-caret-down sm:hidden text-slate-50"></i
       ></a>
     </div>
     <div class="mousedown">
@@ -231,7 +231,7 @@
     >
       <h1 class="flex items-center justify-center" id="introduction">
         <mark
-          class="mt-10 px-2 text-2xl text-white bg-blue-600 rounded dark:bg-blue-500"
+          class="mt-10 px-2 text-2xl text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
           >Introduction</mark
         >
       </h1>
@@ -361,10 +361,10 @@
 
     <!-- Fin partie desktop -->
 
-    <div id="projects" class="md:h-screen">
+    <div id="projects" class="text-slate-50">
       <h2 class="text-center p-10">
         <mark
-          class="px-2 text-2xl text-white bg-blue-600 rounded dark:bg-blue-500"
+          class="px-2 text-2xl text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
           >Projects in progress</mark
         >
       </h2>
@@ -399,7 +399,7 @@
           <h2 class="text-center pb-5">Bagueton (App)</h2>
           <span class="text-indigo-300">Type:</span> <span>Android App</span
           ><br />
-          <span class="text-indigo-300">For:</span> <span>Formation</span>
+          <span class="text-indigo-300">For:</span> <span>Training</span>
           <br />
           <span class="text-indigo-300">Tech:</span><span> Kotlin</span><br />
           <span class="text-indigo-300">Github:</span>
